# Steel-Canvas

./: .env.example  .gitignore  README.md  bundle-stats.html  package-lock.json  package.json
docs/: multiplayer_architecture.md.resolved
src/: App.css  App.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ast_tester.rs  lib.rs
src/components/canvas/: Canvas.tsx  EdgesLayer.tsx  GhostCursors.tsx
src/components/cli/: CliBar.tsx
src/components/folders/: FolderComponent.tsx
src/components/nodes/: Node.tsx  TerminalNode.tsx  WeldKeyNode.tsx
src/components/ui/: AutosaveManager.tsx  ContextMenu.tsx  ExportModal.tsx  NativeWebview.tsx  NoteEditor.tsx  TagSearchModal.tsx  TagWheel.tsx  WebNodeModal.tsx
src/lib/: commandDispatcher.ts  exportEngine.ts  geometry.ts  graphUtils.ts  persistence.ts  weldNetwork.ts
src/store/: useStore.ts
src/types/: index.ts
steel-signaling/: .gitignore  generate_key.js  package-lock.json  package.json  server.js
