[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
uuid = { version = "1.21.0", features = ["v4"] }
regex = "1.12.3"
rustpython-parser = "0.4.0"
swc_ecma_parser = "34.0.0"
swc_common = "18.0.1"
swc_ecma_ast = "20.0.1"
rustpython-ast = { version = "0.4.0", features = ["visitor"] }
portable-pty = "0.9.0"
tokio = { version = "1.49.0", features = ["sync", "time"] }
url = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"


